# dune-mcp

./: .gitignore  Makefile  README.md  __init__.py  client.py  models.py  pyproject.toml  server.py
.github/workflows/: pr.yml  release.yml  test.yml
tests/: __init__.py  conftest.py  test_client.py  test_models.py  test_server.py
